fix bugs on safari

--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -32,7 +32,7 @@
 .intro-name-welcome>:nth-child(3)::after {
   content: "";
   border-right: 7px solid var(--name);
-  padding-left: 1rem;
+  padding-left: 5px;
   animation-name: blink;
   animation-duration: 0.45s;
   animation-timing-function: normal;
@@ -181,8 +181,14 @@
   .intro-name>:nth-child(1) {
     color: white;
     font-weight: bold;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     margin-bottom: 2rem;
+  }
+  .intro-name>:nth-child(2) {
+    font-size: 1.125rem;
+  }
+  .intro-name>:nth-child(3) {
+    font-size: 1.125rem;
   }
   .intro-job {
     margin-bottom: 2rem;
